--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="https://shiming-chen.github.io/Similarity-page/Similarit.html" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
 			<strong>[<a href="https://github.com/shiming-chen/Similariy-DT">Code</a>]
-				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]</strong>
+				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]
 				[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>        
 			<br>
 		<p ><strong>Shiming Chen</strong>, Peng Zhang, Guo-sen Xie, Zehong Cao, Qinmu Peng, Wei Yuan, Xinge You.</p>
