--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/CVPR22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://arxiv.org/abs/2203.03137" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.</a><strong>[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>][<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
+		<td> <a href="https://openaccess.thecvf.com/content/CVPR2022/html/Chen_MSDN_Mutually_Semantic_Distillation_Network_for_Zero-Shot_Learning_CVPR_2022_paper.html" target="_blank"> MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning.</a>
+			<strong>[<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Chen_MSDN_Mutually_Semantic_Distillation_Network_for_Zero-Shot_Learning_CVPR_2022_paper.pdf">PDF</a>]
+				[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
        <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
