--- a/index.html
+++ b/index.html
@@ -203,7 +203,10 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/motivation-new.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a><strong>[<a href="https://proceedings.neurips.cc/paper/2021/file/8b0d268963dd0cfb808aac48a549829f-Paper.pdf">PDF</a>]</strong><strong>[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]</strong><strong>[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
+		<td> <a href="https://proceedings.neurips.cc/paper/2021/hash/8b0d268963dd0cfb808aac48a549829f-Abstract.html" target="_blank"> HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning.</a>
+			<strong>[<a href="https://proceedings.neurips.cc/paper/2021/file/8b0d268963dd0cfb808aac48a549829f-Paper.pdf">PDF</a>]
+				[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]
+				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
        <p style="margin-top: -11px"><i>Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
@@ -217,7 +220,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/FREE.jpg" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.pdf" target="_blank">
+		<td> <a href="https://openaccess.thecvf.com/content/ICCV2021/html/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.html" target="_blank">
 			FREE: Feature Refinement for Generalized Zero-shot Learning.</a>
 			<strong>[<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Chen_FREE_Feature_Refinement_for_Generalized_Zero-Shot_Learning_ICCV_2021_paper.pdf">PDF</a>]
 				[<a href="https://arxiv.org/abs/2107.13807">arXiv</a>]</strong>
