--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ var _hmt = _hmt || [];
 </script>
 
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Shiming Chen's Homepage</title>
+	<title>Shiming Chen-陈使明</title>
         <link rel="shortcut icon" href="img/chen1.jpg"/>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 	<meta name="keywords" content="Shimingchen, EIC, HUST, The Huazhong University of Science and Technology"> 
