--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/TransZero-AAAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a>
+		<td> <a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a>
 			<strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a>]</strong>
 			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
 			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
