--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/similarity-DT.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="https://shiming-chen.github.io/Similarity-page/Similarit.html" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
+		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
 			<strong>[<a href="https://github.com/shiming-chen/Similariy-DT">Code</a>]
 				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]
 				[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>        
