--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -47,19 +47,22 @@
        <span style="font-size: 18px"><a class='urllink' href='https://shiming-chen.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Shiming Chen</strong></font></a><sup>1</sup>,
         <a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Ziming Hong</strong></font></a><sup>1</sup>,
         <a class='urllink' href='https://scholar.google.com/citations?user=LKaWa9gAAAAJ' title='' rel='nofollow'><font color="#0000FF"><strong>Guo-Sen Xie</strong></font></a><sup>2</sup>,
-		<a class='urllink' href='https://zhaoj9014.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Jian Zhao</strong></font></a><sup>3</sup>,
+	<a class='urllink' href='https://ybsong00.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Yibing Song</strong></font></a><sup>3</sup>,
+	<a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Hao Li</strong></font></a><sup>4</sup>,
+	<a class='urllink' href='https://zhaoj9014.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Jian Zhao</strong></font></a><sup>5</sup>,
 	<a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>,
-        <a class='urllink' href='https://yanshuicheng.ai/' title='' rel='nofollow'><font color="#0000FF"><strong>Shuicheng Yan</strong></font></a><sup>4</sup>,
-		<a class='urllink' href='https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en' title='' rel='nofollow'><font color="#0000FF"><strong>Ling Shao</strong></font></a><sup>5</sup>
+        <a class='urllink' href='https://yanshuicheng.ai/' title='' rel='nofollow'><font color="#0000FF"><strong>Shuicheng Yan</strong></font></a><sup>6</sup>,
+	<a class='urllink' href='https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en' title='' rel='nofollow'><font color="#0000FF"><strong>Ling Shao</strong></font></a><sup>7</sup>
 	    </span><br>
 	     
      </p>
       <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Mohamed bin Zayed University of AI (MBZUAI), UAE</p>
+        <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Nanjing University of Science and Technology, China</p>
       <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>3</sup>Institute of North Electronic Equipment, China &nbsp &nbsp<sup>4</sup>Sea AI Lab (SAIL), Singapore</p>
+        <sup>3</sup> Tencent AI Lab, Shenzhen, China &nbsp &nbsp<sup>4</sup>Alibaba Group, China 
+	      &nbsp &nbsp<sup>5</sup>Institute of North Electronic Equipment, China</p>
 	  <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>5</sup> National Center for Artificial Intelligence (NCAI), Saudi Data and Artificial Intelligence Authority (SDAIA), Saudi Arabia</p>
+        <sup>6</sup>Sea AI Lab (SAIL), Singapore &nbsp &nbsp &nbsp <sup>7</sup> Terminus Group </p>
       <p class='vspace STYLE2' style='text-align: center;'>
           <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, youxg}@hust.edu.cn  &nbsp &nbsp {hoongzm, gsxiehm}@gmail.com  &nbsp &nbsp  zhaojian90@u.nus.edu </br> &nbsp&nbsp shuicheng.yan@gmail.com &nbsp &nbsp ling.shao@ieee.org </font></p>
 
@@ -68,7 +71,22 @@
 	  <br>
 	  
       <h2 align="center">Abstract</h2>
-      <P align="justify">Zero-shot learning (ZSL) tackles the novel class recognition problem by transferring semantic knowledge from seen classes to unseen ones. Semantic knowledge is typically represented by attribute descriptions shared between different classes, which act as strong priors for localizing object attributes that represent discriminative region features, enabling significant visual-semantic interaction of ZSL. Existing attention-based models have attempted to learn inferior region features in a single image using unidirectional attention, ignoring the transferability and discriminative attribute localization of visual features. In this paper, we propose a cross attribute-guided Transformer network, termed TransZero++, to refine visual features and learn accurate attribute localization for semantic-augmented visual embedding representations in ZSL. TransZero++ consists of an attribute$\rightarrow$visual Transformer sub-net (AVT) and a visual$\rightarrow$attribute Transformer sub-net (VAT). Specifically, AVT first takes a feature augmentation encoder to alleviate the cross-dataset bias between ImageNet and ZSL benchmarks, and improves the transferability of visual features by reducing the entangled relative geometry relationships among region features. Then, an attribute$\rightarrow$visual decoder is employed to localize the image regions most relevant to each attribute in a given image for attribute-based visual feature representations. Analogously, VAT uses the similar feature augmentation encoder to refine the visual features, which are further applied in visual$\rightarrow$attribute decoder to learn visual-based attribute features. By further introducing feature-level and prediction-level semantical collaborative losses, the two attribute-guided transformers teach each other to learn semantic-augmented visual embeddings via semantical collaborative learning. Finally, the semantic-augmented visual embeddings learned by AVT and VAT are fused to conduct desirable visual-semantic interaction cooperated with semantic vectors for ZSL classification. Extensive experiments show that TransZero achieves the new state-of-the-art performances on three popular challenging ZSL benchmarks. The codes are available at: https://github.com/shiming-chen/TransZero_pp. </P>
+      <P align="justify"> Zero-shot learning (ZSL) tackles the novel class recognition problem by transferring semantic knowledge from seen classes to unseen ones.
+	      Semantic knowledge is typically represented by attribute descriptions shared between different classes, which act as strong priors for localizing object
+	      attributes that represent discriminative region features, enabling significant and sufficient  visual-semantic interaction for advancing ZSL. Existing attention-based
+	      models have struggled to learn inferior region features in a single image by solely using unidirectional attention, which ignore the transferable and 
+	      discriminative attribute localization of visual features for representing the key semantic knowledge for effective knowledge transfer in ZSL.
+	      In this paper, we propose a cross attribute-guided Transformer network, termed TransZero++, to refine visual features and learn accurate attribute localization for
+	      semantic-augmented visual embedding representations in ZSL. TransZero++ consists of an attribute$\rightarrow$visual Transformer sub-net (AVT) and a 
+	      visual$\rightarrow$attribute Transformer sub-net (VAT). Specifically, AVT first takes a feature augmentation encoder to alleviate the cross-dataset bias between 
+	      ImageNet and ZSL benchmarks, and improves the transferability of visual features by reducing the entangled relative geometry relationships among region features.
+	      Then, an attribute$\rightarrow$visual decoder is employed to localize the image regions most relevant to each attribute in a given image for attribute-based visual
+	      feature representations. Analogously, VAT uses the similar feature augmentation encoder to refine the visual features, which are further applied in visual$\rightarrow$
+	      attribute decoder to learn visual-based attribute features. By further introducing feature-level and prediction-level semantical collaborative losses, 
+	      the two attribute-guided transformers teach each other to learn semantic-augmented visual embeddings via semantical collaborative learning. 
+	      Finally, the semantic-augmented visual embeddings learned by AVT and VAT are fused to conduct desirable visual-semantic interaction cooperated with semantic vectors
+	      for ZSL classification. Extensive experiments show that TransZero++ achieves the new state-of-the-art results on three golden and challenging ZSL benchmarks. 
+	      The codes are available at: https://shiming-chen.github.io/TransZero-pp/TransZero-pp.html.</P>
 	  <div class=line> </div>
 	  <p></p>
 	  
