--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -76,8 +76,8 @@
 	      attributes that represent discriminative region features, enabling significant and sufficient  visual-semantic interaction for advancing ZSL. Existing attention-based
 	      models have struggled to learn inferior region features in a single image by solely using unidirectional attention, which ignore the transferable and 
 	      discriminative attribute localization of visual features for representing the key semantic knowledge for effective knowledge transfer in ZSL.
-	      In this paper, we propose a cross attribute-guided Transformer network, termed TransZero++, to refine visual features and learn accurate attribute localization for
-	      semantic-augmented visual embedding representations in ZSL. TransZero++ consists of an attribute$\rightarrow$visual Transformer sub-net (AVT) and a 
+	      In this paper, we propose a cross attribute-guided Transformer network, termed TransZero++, to refine visual features and learn accurate attribute localization for key 
+	      semantic knowledge representations in ZSL. TransZero++ consists of an attribute$\rightarrow$visual Transformer sub-net (AVT) and a 
 	      visual$\rightarrow$attribute Transformer sub-net (VAT). Specifically, AVT first takes a feature augmentation encoder to alleviate the cross-dataset bias between 
 	      ImageNet and ZSL benchmarks, and improves the transferability of visual features by reducing the entangled relative geometry relationships among region features.
 	      Then, an attribute$\rightarrow$visual decoder is employed to localize the image regions most relevant to each attribute in a given image for attribute-based visual
