--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -71,22 +71,19 @@
 	  <br>
 	  
       <h2 align="center">Abstract</h2>
-      <P align="justify"> Zero-shot learning (ZSL) tackles the novel class recognition problem by transferring semantic knowledge from seen classes to unseen ones.
-	      Semantic knowledge is typically represented by attribute descriptions shared between different classes, which act as strong priors for localizing object
-	      attributes that represent discriminative region features, enabling significant and sufficient  visual-semantic interaction for advancing ZSL. Existing attention-based
-	      models have struggled to learn inferior region features in a single image by solely using unidirectional attention, which ignore the transferable and 
-	      discriminative attribute localization of visual features for representing the key semantic knowledge for effective knowledge transfer in ZSL.
-	      In this paper, we propose a cross attribute-guided Transformer network, termed TransZero++, to refine visual features and learn accurate attribute localization for key 
-	      semantic knowledge representations in ZSL. TransZero++ consists of an attribute$\rightarrow$visual Transformer sub-net (AVT) and a 
-	      visual$\rightarrow$attribute Transformer sub-net (VAT). Specifically, AVT first takes a feature augmentation encoder to alleviate the cross-dataset bias between 
-	      ImageNet and ZSL benchmarks, and improves the transferability of visual features by reducing the entangled relative geometry relationships among region features.
-	      Then, an attribute$\rightarrow$visual decoder is employed to localize the image regions most relevant to each attribute in a given image for attribute-based visual
-	      feature representations. Analogously, VAT uses the similar feature augmentation encoder to refine the visual features, which are further applied in visual$\rightarrow$
-	      attribute decoder to learn visual-based attribute features. By further introducing feature-level and prediction-level semantical collaborative losses, 
-	      the two attribute-guided transformers teach each other to learn semantic-augmented visual embeddings via semantical collaborative learning. 
-	      Finally, the semantic-augmented visual embeddings learned by AVT and VAT are fused to conduct desirable visual-semantic interaction cooperated with semantic vectors
-	      for ZSL classification. Extensive experiments show that TransZero++ achieves the new state-of-the-art results on three golden and challenging ZSL benchmarks. 
-	      The codes are available at: https://shiming-chen.github.io/TransZero-pp/TransZero-pp.html.</P>
+      <P align="justify"> Zero-shot learning (ZSL) tackles the novel class recognition problem by transferring semantic knowledge from seen classes to unseen ones. 
+	      Semantic knowledge is typically represented by attribute descriptions shared between different classes, {\color{blue}which act as strong priors for
+	      localizing object attributes that represent discriminative region features,} enabling significant and sufficient  visual-semantic interaction for 
+	      advancing ZSL. Existing attention-based models have struggled to learn inferior region features in a single image by solely using unidirectional 
+	      attention, {\color{blue}which ignore the transferable and discriminative attribute localization of visual features for representing the key semantic
+	      knowledge for effective knowledge transfer in ZSL.} In this paper, we propose a cross attribute-guided Transformer network, termed TransZero++,
+	      to refine visual features and learn accurate attribute localization for key semantic knowledge representations in ZSL. Specifically, 
+	      TransZero++ employs an attribute$\rightarrow$visual Transformer sub-net (AVT) and a visual$\rightarrow$attribute Transformer sub-net (VAT) to learn
+	      attribute-based visual features and visual-based attribute features, respectively. By further introducing feature-level and prediction-level semantical
+	      collaborative losses, the two attribute-guided transformers teach each other to learn semantic-augmented visual embeddings via semantical collaborative
+	      learning. Finally, the semantic-augmented visual embeddings learned by AVT and VAT are fused to conduct desirable visual-semantic interaction cooperated
+	      with class semantic vectors for ZSL classification. Extensive experiments show that TransZero++ achieves the new state-of-the-art results on three
+	      golden and challenging ZSL benchmarks. The project website is at: \url{https://shiming-chen.github.io/TransZero-pp/TransZero-pp.html}.</P>
 	  <div class=line> </div>
 	  <p></p>
 	  
