--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ var _hmt = _hmt || [];
 		<td><a href="" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
 		<p >Ziming Hong*</strong>, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You<sup>#</sup> 
 			(*:co-first author; #:corresponding author)</p>
-	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong>
+	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022: 956-963. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong>
 		</td>
 	</tr>
 	<tr></tr>
@@ -176,7 +176,7 @@ var _hmt = _hmt || [];
 				[<a href="https://arxiv.org/abs/2203.03137">arXiv</a>]
 				[<a href="https://github.com/shiming-chen/MSDN">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Ziming Hong,  Guo-Sen Xie, Wenhan Yang, Qinmu Peng, Kai Wang, Jian Zhao, Xinge You.</p>
-       <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong> CVPR </strong>), 2022: 7612-7621. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -193,7 +193,7 @@ var _hmt = _hmt || [];
 			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
 			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Ziming Hong, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
-       <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022: 330-338. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -209,7 +209,7 @@ var _hmt = _hmt || [];
 				[<a href="https://arxiv.org/abs/2109.15163">arXiv</a>]
 				[<a href="https://github.com/shiming-chen/HSVA">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Guo-Sen Xie, Qinmu Peng, Yang Liu, Baigui Sun, Hao Li, Xinge You, Ling Shao.</p>
-       <p style="margin-top: -11px"><i>Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i>Annual Conference on Neural Information Processing Systems (<strong> NeurIPS </strong>), 2021: 16622-16634. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -227,7 +227,7 @@ var _hmt = _hmt || [];
 				[<a href="https://arxiv.org/abs/2107.13807">arXiv</a>]</strong>
 			<strong>[<a href="https://github.com/shiming-chen/FREE">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Qinmu Peng, Xinge You, Feng Zheng, Ling Shao.</p>
-       <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2021. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
+       <p style="margin-top: -11px"><i> IEEE International Conference on Computer Vision (<strong> ICCV </strong>), 2021: 1106-1112. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
 	</tr>
 	<tr></tr>
@@ -455,7 +455,7 @@ var _hmt = _hmt || [];
                 <script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=kKMhkSHMeApLgHGqTfk5xOrHScwhlrHiRwRbeYjigWg"></script>
             </div>
            <br>
-        &copy; Shiming Chen | <span style="color:Red">Last updated: April 15 2022</span>
+        &copy; Shiming Chen | <span style="color:Red">Last updated: Augst 01, 2022</span>
             </div>
      </div>     
 	
