--- a/index.html
+++ b/index.html
@@ -380,42 +380,52 @@ var _hmt = _hmt || [];
      <h2>Invited Talks</h2>
 	<ul>
 	<li>
-		<div style="float:left; text-align:left">VALSE</div> <div style="float:right; text-align:right">June 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>Huawei (Shanghai)</strong></div> <div style="float:right; text-align:right">August 2022</div><br>
+		<strong>Title</strong>: Deep Feature Representations Based Zero-Shot Learning<br>
+	</li>
+	<li>
+		<div style="float:left; text-align:left; color:red"><strong>Zhidongxi (AI New Youth)</strong></div> <div style="float:right; text-align:right">August 2022</div><br>
+		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
+		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
+		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
+	</li>
+	<li>
+		<div style="float:left; text-align:left; color:red"><strong>VALSE</strong></div> <div style="float:right; text-align:right">June 2022</div><br>
 		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
 		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
 	</li>
  	<li>
-		<div style="float:left; text-align:left">AI Drive</div> <div style="float:right; text-align:right">June 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>AI Drive</strong></div> <div style="float:right; text-align:right">June 2022</div><br>
 		<strong>Title</strong>: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
 	</li>
 	<li>
-		<div style="float:left; text-align:left">AI TIME</div> <div style="float:right; text-align:right">June 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>AI TIME</strong></div> <div style="float:right; text-align:right">June 2022</div><br>
 		<strong>Title</strong>: Attribute-guided Transformer for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Bilibili</a>]
 	</li>
 	<li>
-		<div style="float:left; text-align:left">Extreme Mart (极市)</div> <div style="float:right; text-align:right">Feb. 2022</div><br>
+		<div style="float:left; text-align:left"; color:red"><strong>Extreme Mart (极市)</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: Research on Key Technology for Zero-shot Learning<br>
 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Bilibili</a>]
 	</li>
        <li>
-		<div style="float:left; text-align:left">AI TIME</div> <div style="float:right; text-align:right">Feb. 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>AI TIME</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: 基于层次适应的零样本学习<br>
 	       <strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1X44y1H7S4">Bilibili</a>]
 	</li>
         <li>
-		<div style="float:left; text-align:left">CVTE</div> <div style="float:right; text-align:right">Dec. 2021</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>CVTE</strong></div> <div style="float:right; text-align:right">Dec. 2021</div><br>
 		<strong>Title</strong>: The Overview of Zero-Shot Learning<br>
 	</li>
 	<li>
-		<div style="float:left; text-align:left">Tencent AI Lab </div> <div style="float:right; text-align:right">Dec. 2021</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>Tencent AI Lab </strong></div> <div style="float:right; text-align:right">Dec. 2021</div><br>
 		<strong>Title</strong>: The Frontiers in Zero-Shot Learning<br>
 	</li>
 		
 	<li>
-		<div style="float:left; text-align:left">Alibaba DAMO Academic </div> <div style="float:right; text-align:right">Aug. 2021</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>Alibaba DAMO Academic </strong></div> <div style="float:right; text-align:right">Aug. 2021</div><br>
 		<strong>Title</strong>: HSVA: Hierarchical Semantic-Visual Adaptation for Zero-Shot Learning<br>
 	</li>
 	
