--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@ var _hmt = _hmt || [];
 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Bilibili</a>]
 	</li>
 	<li>
-		<div style="float:left; text-align:left"; color:red"><strong>Extreme Mart (极市)</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>Extreme Mart (极市)</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: Research on Key Technology for Zero-shot Learning<br>
 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Bilibili</a>]
 	</li>
