--- a/index.html
+++ b/index.html
@@ -380,28 +380,28 @@ var _hmt = _hmt || [];
      <h2>Invited Talks</h2>
 	<ul>
 	<li>
-		<div style="float:left; text-align:left; color:red"><strong>Huawei (Shanghai)</strong></div> <div style="float:right; text-align:right">August 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>Huawei (Shanghai)</strong></div> <div style="float:right; text-align:right">Aug. 2022</div><br>
 		<strong>Title</strong>: Deep Feature Representations Based Zero-Shot Learning<br>
 	</li>
 	<li>
-		<div style="float:left; text-align:left; color:red"><strong>Zhidongxi (AI New Youth)</strong></div> <div style="float:right; text-align:right">August 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>Zhidongxi (AI New Youth)</strong></div> <div style="float:right; text-align:right">Aug. 2022</div><br>
 		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
 		[<a href="https://apposcmf8kb5033.h5.xiaoeknow.com/v2/course/alive/l_62f36b2ee4b0eca59c2127c7?type=2&app_id=appoSCMf8kb5033&pro_id=p_6214b182e4b066e96087ec57&available=true&share_user_id=u_628c93c5dc641_P1UyQhrGmR&share_type=5&scene=%E5%88%86%E4%BA%AB&share_scene=1&entry=2&entry_type=2002&state=3e66fce1cd6f09304d0691d2f4f91ef9_tDzhxX">Video</a>]
 	</li>
 	<li>
-		<div style="float:left; text-align:left; color:red"><strong>VALSE</strong></div> <div style="float:right; text-align:right">June 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>VALSE</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
 		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
 	</li>
  	<li>
-		<div style="float:left; text-align:left; color:red"><strong>AI Drive</strong></div> <div style="float:right; text-align:right">June 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>AI Drive</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
 	</li>
 	<li>
-		<div style="float:left; text-align:left; color:red"><strong>AI TIME</strong></div> <div style="float:right; text-align:right">June 2022</div><br>
+		<div style="float:left; text-align:left; color:red"><strong>AI TIME</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: Attribute-guided Transformer for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Bilibili</a>]
 	</li>
