--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ var _hmt = _hmt || [];
 		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
 			<strong>[<a href="https://github.com/shiming-chen/Similariy-DT">Code</a>]
 				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]
-				[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>        
+				<!--[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>-->        
 			<br>
 		<p ><strong>Shiming Chen</strong>, Peng Zhang, Guo-sen Xie, Zehong Cao, Qinmu Peng, Wei Yuan, Xinge You.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Systems, Man and Cybernetics: Systems (<strong> TSMCA</strong>), to appear, 2022. <strong>
@@ -292,7 +292,8 @@ var _hmt = _hmt || [];
 		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a>
 		<strong>[<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>]
 		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]
-		 [<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>]</strong><br>
+		 <!--[<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>]</strong>-->
+                 <br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
 	       <p style="margin-top: -11px"><i>IEEE Transactions on Evolutionary Computation (<strong> TEVC </strong>), 25:986-1000, 2021. 
 		       <strong>(<span style="color:Burlywood">SCI, IF=16.497</span>)</strong></p>
