--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ var _hmt = _hmt || [];
 	  <span>I come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br>
 	  I am currently a Third-year PhD student in School of Electronic Information and Communications at <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a>, under the supervision by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>.
 	  I'm also visiting at <a href="https://www.tmllab.ai/">Trustworthy Machine Learning Lab (TML Lab)</a>, University of Sydney, working with Prof. <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a>.
-          My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>generative modeling and learning</i></strong>, <strong><i>zero-shot learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>.</span> <br> <br> 
+          My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>.</span> <br> <br> 
 	  <span></span><br>
 <!-- 	  <span style="color:Red">I'm Looking forward to a position for work or postdoc researcher, please feel free to drop me an email if you have the relevant position.</span> -->
     </div>
@@ -274,11 +274,11 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="https://ieeexplore.ieee.org/document/9833533" target="_blank">Kernelized Similarity Learning and Embedding for Dynamic Texture Synthesis.</a>
 			<strong>[<a href="https://github.com/shiming-chen/Similariy-DT">Code</a>]
-				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]
+				[<a href="http://arxiv.org/abs/1911.04254">arXiv</a>]</strong>
 				<!--[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>-->        
 			<br>
 		<p ><strong>Shiming Chen</strong>, Peng Zhang, Guo-sen Xie, Zehong Cao, Qinmu Peng, Wei Yuan, Xinge You.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Systems, Man and Cybernetics: Systems (<strong> TSMCA</strong>), to appear, 2022. <strong>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Systems, Man and Cybernetics: Systems (<strong> TSMCA</strong>), to appear, 2022. 
 		 (<span style="color:Burlywood">SCI, IF=11.471</span>)</strong></p>
 	<tr></tr>
     <tr></tr>
@@ -291,7 +291,7 @@ var _hmt = _hmt || [];
 		</td>		
 		<td><a href="CDE-GAN-website/CDE-GAN.html" target="_blank">CDE-GAN: Cooperative Dual Evolution Based Generative Adversarial Network.</a>
 		<strong>[<a href="https://ieeexplore.ieee.org/document/9386237">PDF</a>]
-		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]
+		 [<a href="https://arxiv.org/abs/2008.09388">arXiv</a>]</strong>
 		 <!--[<a href="CDE-GAN-website/CDE-GAN.html">Project Page</a>]</strong>-->
                  <br>
 		<p ><strong>Shiming Chen</strong>, Wenjie Wang, Beihao Xia, Xinge You, Qinmu Peng, Zehong Cao, Weiping Ding.</p>
