--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.08.01</span>, I was invited as a Program Committee (PC) Member for <strong><i>AAAI'23</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.08.01</span>, I was invited as a Reviewer for <strong><i>ICLR'23</i></strong>.</li>
+      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08.01</span>, I was invited as a Program Committee (PC) Member for <strong><i>AAAI'23</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.06.24</span>, I was invited as a peer reviewer for <strong><i>TPAMI</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.27</span>, I gave a talk about our CVPR'22 work (MSDN) in VALSE.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.26</span>, I gave a talk about zero-shot learning in AI TIME and AI Drive.</li>
@@ -374,7 +375,7 @@ var _hmt = _hmt || [];
 	   IEEE/CAA Journal of Automatica Sinica, 
            Information Sciences (INS), etc.<br>
 	   
-	 <strong>Conference PC/Reviewers:</strong> IJCAI(2021, 2022), ACM MM'21, ICCV'21, AAAI(2022,2023), CVPR'22, ECCV'22.
+	 <strong>Conference PC/Reviewers:</strong> IJCAI(2021, 2022), ACM MM'21, ICCV'21, AAAI(2022,2023), CVPR'22, ECCV'22, ICLR'23.
     </div>
 	
 	 
