--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -49,21 +49,19 @@
 	<a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Wenjin Hou</strong></font></a><sup>1</sup>,
         <a class='urllink' href='https://scholar.google.com/citations?user=LKaWa9gAAAAJ' title='' rel='nofollow'><font color="#0000FF"><strong>Guo-Sen Xie</strong></font></a><sup>2</sup>,
 	<a class='urllink' href='https://ybsong00.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Yibing Song</strong></font></a><sup>3</sup>,
-	<a class='urllink' href='' title='' rel='nofollow'><font color="#0000FF"><strong>Hao Li</strong></font></a><sup>4</sup>,
-	<a class='urllink' href='https://zhaoj9014.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Jian Zhao</strong></font></a><sup>5</sup>,
+	<a class='urllink' href='https://zhaoj9014.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Jian Zhao</strong></font></a><sup>4</sup>,
 	<a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>,
-        <a class='urllink' href='https://yanshuicheng.ai/' title='' rel='nofollow'><font color="#0000FF"><strong>Shuicheng Yan</strong></font></a><sup>6</sup>,
-	<a class='urllink' href='https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en' title='' rel='nofollow'><font color="#0000FF"><strong>Ling Shao</strong></font></a><sup>7</sup>
+        <a class='urllink' href='https://yanshuicheng.ai/' title='' rel='nofollow'><font color="#0000FF"><strong>Shuicheng Yan</strong></font></a><sup>5</sup>,
+	<a class='urllink' href='https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en' title='' rel='nofollow'><font color="#0000FF"><strong>Ling Shao</strong></font></a><sup>6</sup>
 	    </span><br>
 	     
      </p>
       <p class='vspace STYLE2' style='text-align: center;'>
         <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Nanjing University of Science and Technology, China</p>
       <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>3</sup> Tencent AI Lab, Shenzhen, China &nbsp &nbsp<sup>4</sup>Alibaba Group, China 
-	      &nbsp &nbsp<sup>5</sup>Institute of North Electronic Equipment, China</p>
+        <sup>3</sup> Tencent AI Lab, Shenzhen, China   &nbsp &nbsp<sup>4</sup>Institute of North Electronic Equipment, China</p>
 	  <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>6</sup>Sea AI Lab (SAIL), Singapore &nbsp &nbsp &nbsp <sup>7</sup> Terminus Group </p>
+        <sup>5</sup>Sea AI Lab (SAIL), Singapore &nbsp &nbsp &nbsp <sup>6</sup> Terminus Group </p>
       <p class='vspace STYLE2' style='text-align: center;'>
           <font color="#0000FF" font-style='italic' font-family='NimbusMonL-Regu'>{shimingchen, youxg}@hust.edu.cn  &nbsp &nbsp {hoongzm, gsxiehm}@gmail.com  &nbsp &nbsp  zhaojian90@u.nus.edu </br> &nbsp&nbsp shuicheng.yan@gmail.com &nbsp &nbsp ling.shao@ieee.org </font></p>
 
