--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ var _hmt = _hmt || [];
 					
 					<!-- <a href="paper/CV.pdf"><img src="img/cv_p.jpg"  height="40px" style="margin-bottom:-3px"></a> -->
 					<a href="https://github.com/shiming-chen"><img src="img/github.jpg" height="40px" style="margin-bottom:-3px"></a>
+					<a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ"><img src="img/google-logo.png"  height="40px" style="margin-bottom:-3px"></a>
 					<a href="img/weichat.pdf"><img src="img/weichat.jpg"  height="40px" style="margin-bottom:-3px"></a>
 				</p>
 			</td>
