--- a/index.html
+++ b/index.html
@@ -343,7 +343,11 @@ var _hmt = _hmt || [];
 </table>
 	  
 	  
-	  
+    <h2><strong>Awards</strong></h2>
+   <div>
+	<li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.10</span>, <strong>National Scholarship</strong>.</li>
+	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08</span>, <strong>Huawei Academic Star</strong>.</li>
+    </div>  
    
     <h2>Industrial Experience</h2>
 	<ul>
@@ -366,7 +370,7 @@ var _hmt = _hmt || [];
 	</ul>  
 	 
 	 
-      <h2><strong>Academic Experience:Reviewer</strong></h2>
+     <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
 	<strong>Journal Reviewers:</strong> 
 	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TII, TSMCA, 
