--- a/index.html
+++ b/index.html
@@ -387,6 +387,10 @@ var _hmt = _hmt || [];
      <h2>Invited Talks</h2>
 	<ul>
 	<li>
+		<div style="float:left; text-align:left; color:red"><strong>IEEE International Conference on Digital Twins and Parallel Intelligence)</strong></div> <div style="float:right; text-align:right">Nov. 2022</div><br>
+		<strong>Title</strong>: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
+	</li>
+	<li>
 		<div style="float:left; text-align:left; color:red"><strong>Huawei (Shanghai)</strong></div> <div style="float:right; text-align:right">Aug. 2022</div><br>
 		<strong>Title</strong>: Deep Feature Representations Based Zero-Shot Learning<br>
 	</li>
