--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ var _hmt = _hmt || [];
 		[<a href="TransZero-pp/TransZero-pp.html">Project Page</a>][<a href="http://arxiv.org/abs/2112.08643">arXiv</a>]
 		[<a href="https://github.com/shiming-chen/TransZero_pp">Code</a>]</strong>
 		</p>		
-	 <p style="margin-top: -11px"><span style="color:Green">Submitted to <i>IEEE Transactions Pattern Analysis and Machine Intelligence (<strong> TPAMI </strong>)</i> (Minor Revision)</span></p>
+	 <p style="margin-top: -11px"><span style="color:Green">Submitted to <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong> TPAMI </strong>)</i> (Minor Revision)</span></p>
 		</td>
 	</tr>
 	<tr></tr>
