--- a/index.html
+++ b/index.html
@@ -420,27 +420,27 @@ var _hmt = _hmt || [];
 		<div style="float:left; text-align:left; color:red"><strong>VALSE</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
-		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
+		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Video</a>]
 	</li>
  	<li>
 		<div style="float:left; text-align:left; color:red"><strong>AI Drive</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
-		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Bilibili</a>]
+		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Video</a>]
 	</li>
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>AI TIME</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: Attribute-guided Transformer for Zero-Shot Learning<br>
-		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Bilibili</a>]
+		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Video</a>]
 	</li>
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>Extreme Mart (极市)</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: Research on Key Technology for Zero-shot Learning<br>
-		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Bilibili</a>]
+		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Video</a>]
 	</li>
        <li>
 		<div style="float:left; text-align:left; color:red"><strong>AI TIME</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: 基于层次适应的零样本学习<br>
-	       <strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1X44y1H7S4">Bilibili</a>]
+	       <strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1X44y1H7S4">Video</a>]
 	</li>
         <li>
 		<div style="float:left; text-align:left; color:red"><strong>CVTE</strong></div> <div style="float:right; text-align:right">Dec. 2021</div><br>
