--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ var _hmt = _hmt || [];
      <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
 	<strong>Journal Reviewers:</strong> 
-	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TII, TSMCA, 
+	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TSMCA,  TITS, TII,
 	   Information Fusion (INF),
 	   Artificial Intelligence Review, 
 	   Expert Systems With Applications，
