--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@ var _hmt = _hmt || [];
 	   IEEE/CAA Journal of Automatica Sinica, 
            Information Sciences (INS), etc.<br>
 	   
-	 <strong>Conference PC/Reviewers:</strong> IJCAI(2021, 2022), ACM MM'21, ICCV'21, AAAI(2022,2023), CVPR'22, ECCV'22, ICLR'23.
+	 <strong>Conference PC/Reviewers:</strong> IJCAI(2021, 2022), ACM MM'21, ICCV'21, AAAI(2022,2023), CVPR(2022, 2023), ECCV'22, ICLR'23.
     </div>
 	
 	 
