--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@ var _hmt = _hmt || [];
 	  
     <h2><strong>Awards</strong></h2>
    <div>
-	<li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.10</span>, <strong>National Scholarship</strong>.</li>
+	<li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.10</span>, <strong> China National Scholarship</strong>.</li>
 	<li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08</span>, <strong>Huawei Academic Star</strong>.</li>
     </div>  
    
