--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ var _hmt = _hmt || [];
     <h2>Selected Publications <a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">(Google Scholar)</a> </h2>
 <!--<p><a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ">My Google Scholar</a></p>-->
 	 
-<!--<table id="tbPublications" width="100%">
+<table id="tbPublications" width="100%">
 	<tbody>
 <h3 style="color: red">Preprints</h3>
 		
@@ -148,7 +148,7 @@ var _hmt = _hmt || [];
     <tr></tr>
     
  </tbody>
-</table>-->
+</table>
 	      
 <table id="tbPublications" width="100%">
 <tbody>
