--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ var _hmt = _hmt || [];
 		<img src="img/TransZero-AAAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909" target="_blank"> TransZero: Attribute-guided Transformer for Zero-Shot Learning.</a>
-			<strong>[<a href="paper/Thesis.pdf">PDF</a>]</strong>
+			<strong>[<a href="paper/AAAI22-TransZero.pdf">PDF</a>]</strong>
 			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
 			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
 		 <p ><strong>Shiming Chen</strong>, Ziming Hong, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
