--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -51,11 +51,13 @@
 	<a class='urllink' href='https://ybsong00.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Yibing Song</strong></font></a><sup>3</sup>,
 	<a class='urllink' href='https://zhaoj9014.github.io/' title='' rel='nofollow'><font color="#0000FF"><strong>Jian Zhao</strong></font></a><sup>4</sup>,
 	<a class='urllink' href='http://bmal.hust.edu.cn/info/1005/1091.htm' title='' rel='nofollow'><font color="#0000FF"><strong>Xinge You</strong></font></a><sup>1</sup>,
+	</span></p>
+        <p style='text-align: center;'> 
         <a class='urllink' href='https://yanshuicheng.ai/' title='' rel='nofollow'><font color="#0000FF"><strong>Shuicheng Yan</strong></font></a><sup>5</sup>,
 	<a class='urllink' href='https://scholar.google.com/citations?user=z84rLjoAAAAJ&hl=en' title='' rel='nofollow'><font color="#0000FF"><strong>Ling Shao</strong></font></a><sup>6</sup>
-	    </span><br>
-	     
+      </span><br>     
      </p>
+	
       <p class='vspace STYLE2' style='text-align: center;'>
         <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Nanjing University of Science and Technology, China</p>
       <p class='vspace STYLE2' style='text-align: center;'>
