--- a/TransZero-pp/TransZero-pp.html
+++ b/TransZero-pp/TransZero-pp.html
@@ -61,7 +61,7 @@
       <p class='vspace STYLE2' style='text-align: center;'>
         <sup>1</sup>Huazhong University of Science and Technology (HUST), China &nbsp &nbsp <sup>2</sup>Nanjing University of Science and Technology, China</p>
       <p class='vspace STYLE2' style='text-align: center;'>
-        <sup>3</sup> Tencent AI Lab, Shenzhen, China   &nbsp &nbsp<sup>4</sup>Institute of North Electronic Equipment, China</p>
+        <sup>3</sup> AI Institute, Fundan University, China   &nbsp &nbsp<sup>4</sup>Institute of North Electronic Equipment, China</p>
 	  <p class='vspace STYLE2' style='text-align: center;'>
         <sup>5</sup>Sea AI Lab (SAIL), Singapore &nbsp &nbsp &nbsp <sup>6</sup> Terminus Group </p>
       <p class='vspace STYLE2' style='text-align: center;'>
@@ -109,7 +109,7 @@
 	   <div class="div-table" align='center'>     
 	   <div class="div-table-row">
 			  	<div class="div-table-col-3" align='center' id="img-large" >
-                <center><a class=urllink title="" rel=nofollow><img src="figures/PAMI.png" width="150" height="150" class="layered-paper-big"></br></br></br><h3><font color="#0000FF"><strong>Paper</strong></font></h3></a></center>
+                <center><a class=urllink title="" href="https://ieeexplore.ieee.org/document/9987664" rel=nofollow><img src="figures/PAMI.png" width="150" height="150" class="layered-paper-big"></br></br></br><h3><font color="#0000FF"><strong>Paper</strong></font></h3></a></center>
 				</div>
 				<div class="div-table-col-3" align='center' id="img-large1" style="margin-left:150px">
                 <!--<center><a class=urllink title="" href="https://github.com/shiming-chen/Similariy-DT" rel=nofollow><img src="Videos-gif/github-figure.jpg" width="150" height="150"></br></br></br><h3><font color="#0000FF"><strong>Code</strong><br></font>&nbsp<font color="#FF0000"><strong>(Coming soon)</strong></font></h3></a></center>-->
