--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ var _hmt = _hmt || [];
      
       <h2 >News</h2>
     <div id = "news-content" style="margin-top: 15px">
-      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.12.11</span>, Our TransZero++ is accepted to <strong><i>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</i></strong>.</li>
+      <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.12.11</span>, Our TransZero++ is accepted to <strong><i>TPAMI</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.10.13</span>, I was invited as a Reviewer for <strong><i>ICLR'23</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08.01</span>, I was invited as a Program Committee (PC) Member for <strong><i>AAAI'23</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.06.24</span>, I was invited as a peer reviewer for <strong><i>TPAMI</i></strong>.</li>
