--- a/index.html
+++ b/index.html
@@ -101,7 +101,6 @@ var _hmt = _hmt || [];
       <li style="margin: -10px 0px 0px 5px" ><span style="color:Red">2022.12.11</span>, Our TransZero++ is accepted to <strong><i>TPAMI</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.10.13</span>, I was invited as a Reviewer for <strong><i>ICLR'23</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.08.01</span>, I was invited as a Program Committee (PC) Member for <strong><i>AAAI'23</i></strong>.</li>
-      <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.06.24</span>, I was invited as a peer reviewer for <strong><i>TPAMI</i></strong>.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.27</span>, I gave a talk about our CVPR'22 work (MSDN) in VALSE.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.05.26</span>, I gave a talk about zero-shot learning in AI TIME and AI Drive.</li>
       <li style="margin: 10px 0px 0px 5px" ><span style="color:Red">2022.04.21</span>, one paper is accepted to <strong><i>IJCAI'22</i></strong>.</li>
@@ -393,14 +392,15 @@ var _hmt = _hmt || [];
      <h2><strong>Academic Experience:Reviewer</strong></h2>
    <div>
 	<strong>Journal Reviewers:</strong> 
-	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TSMCA,  TITS, TII,
+	   IEEE TPAMI, TIP, TNNLS, TEVC, TCYB, TSMCA,  TITS, TII, 
+	   International Journal of Computer Vision (IJCV),
 	   Information Fusion (INF),
 	   Artificial Intelligence Review, 
 	   Expert Systems With Applications，
 	   IEEE/CAA Journal of Automatica Sinica, 
            Information Sciences (INS), etc.<br>
 	   
-	 <strong>Conference PC/Reviewers:</strong> IJCAI(2021, 2022), ACM MM'21, ICCV'21, AAAI(2022,2023), CVPR(2022, 2023), ECCV'22, ICLR'23.
+	 <strong>Conference PC/Reviewers:</strong> IJCAI(2021, 2022), ACM MM'21, ICCV (2021,2023), AAAI(2022,2023), CVPR(2022, 2023), ECCV'22, ICLR'23.
     </div>
 	
 	 
