--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ var _hmt = _hmt || [];
 		[<a href="https://ieeexplore.ieee.org/document/9987664">PDF</a>]
 		[<a href="https://github.com/shiming-chen/TransZero_pp">Code</a>]</strong>
 		</p>		
-	 <p style="margin-top: -11px"> <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong> TPAMI </strong>), to appear, 2022. <strong>
+	 <p style="margin-top: -11px"> <i>IEEE Transactions on Pattern Analysis and Machine Intelligence (<strong> TPAMI </strong>), in press, 2022. <strong>
 		 (<span style="color:Burlywood">SCI, IF=24.314</span>)</strong></p>
 		</td>
 	</tr>
@@ -283,7 +283,7 @@ var _hmt = _hmt || [];
 			<strong>[<a href="https://github.com/shiming-chen/GNDAN">Code</a>]
 				[<a href="">PDF</a>]</strong><br>
 		<p ><strong>Shiming Chen</strong>, Ziming Hong, Guo-Sen Xie, Xinge You, Weiping Ding and Ling Shao.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), to appear, 2022. <strong>
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Neural Networks and Learning Systems (<strong> TNNLS</strong>), in press, 2022. <strong>
 		 (<span style="color:Burlywood">SCI, IF=14.255</span>)</strong></p>
 	<tr></tr>
     <tr></tr>
@@ -299,7 +299,7 @@ var _hmt = _hmt || [];
 				<!--[<a href="https://shiming-chen.github.io/Similarity-page/Similarit.html">Project Page</a>]</strong>-->        
 			<br>
 		<p ><strong>Shiming Chen</strong>, Peng Zhang, Guo-sen Xie, Zehong Cao, Qinmu Peng, Wei Yuan, Xinge You.</p>
-	       <p style="margin-top: -11px"><i>IEEE Transactions on Systems, Man and Cybernetics: Systems (<strong> TSMCA</strong>), to appear, 2022. <strong> 
+	       <p style="margin-top: -11px"><i>IEEE Transactions on Systems, Man and Cybernetics: Systems (<strong> TSMCA</strong>), in press, 2022. <strong> 
 		 (<span style="color:Burlywood">SCI, IF=11.471</span>)</strong></p>
 	<tr></tr>
     <tr></tr>
