--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ var _hmt = _hmt || [];
 		<td width="206">
 		<img src="img/IJCAI22.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td><a href="" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
+		<td><a href="https://www.ijcai.org/proceedings/2022/134" target="_blank">Semantic Compression Embedding for Generative Zero-Shot Learning.</a><br>
 		<p >Ziming Hong*</strong>, <strong>Shiming Chen<sup>*#</sup></strong>, Guo-Sen Xie, Wenhan Yang, Jian Zhao, Yuanjie Shao, Qinmu Peng, Xinge You<sup>#</sup> 
 			(*:co-first author; #:corresponding author)</p>
 	       <p style="margin-top: -11px"><i>The 31th International Joint Conference on Artificial Intelligence (<strong> IJCAI </strong>), 2022: 956-963. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong>
