--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ var _hmt = _hmt || [];
     <div id = "logo" style="margin-top: 10px; text-align:center">
 	    <div align="center" style="margin:auto;padding-top:10px">
             <div style="width:12%">
-                <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=kKMhkSHMeApLgHGqTfk5xOrHScwhlrHiRwRbeYjigWg'></script>
+                <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=kKMhkSHMeApLgHGqTfk5xOrHScwhlrHiRwRbeYjigWg"></script>
             </div>
            <br>
         &copy; Shiming Chen | <span style="color:Red">Last updated: Augst 01, 2022</span>
