--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ var _hmt = _hmt || [];
 			<strong>[<a href="https://ojs.aaai.org/index.php/AAAI/article/view/19909">PDF</a>]</strong>
 			<strong>[<a href="https://arxiv.org/pdf/2112.01683.pdf">arXiv</a>]</strong>
 			<strong>[<a href="https://github.com/shiming-chen/TransZero">Code</a>]</strong><br>
-		 <p ><strong>Shiming Chen</strong>, Ziming Hong, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.</p>
+		 <p ><strong>Shiming Chen<sup>*</sup></strong>, Ziming Hong<sup>*#</sup>, Yang Liu, Guo-Sen Xie, Baigui Sun, Hao Li, Qinmu Peng, Ke Lu, Xinge You.(*:co-first author)</p>
        <p style="margin-top: -11px"><i>Thirty-Sixth AAAI Conference on Artificial Intelligence (<strong> AAAI </strong>), 2022: 330-338. <strong>(<span style="color:Burlywood">CCF-A</span>)</strong> </i></p>
 		</td>
 	</tr>
