--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var _hmt = _hmt || [];
 					<!-- <a href="paper/CV.pdf"><img src="img/cv_p.jpg"  height="40px" style="margin-bottom:-3px"></a> -->
 					<a href="https://github.com/shiming-chen"><img src="img/github.jpg" height="40px" style="margin-bottom:-3px"></a>
 					<a href="https://scholar.google.com/citations?hl=en&user=botczdcAAAAJ"><img src="img/google-logo.png"  height="40px" style="margin-bottom:-3px"></a>
-					<a href="img/weichat.pdf"><img src="img/weichat.jpg"  height="40px" style="margin-bottom:-3px"></a>
+<!-- 					<a href="img/weichat.pdf"><img src="img/weichat.jpg"  height="40px" style="margin-bottom:-3px"></a> -->
 				</p>
 			</td>
 			<td>
@@ -417,34 +417,34 @@ var _hmt = _hmt || [];
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>Zhidongxi (AI New Youth)</strong></div> <div style="float:right; text-align:right">Aug. 2022</div><br>
 		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
-		<strong>Link</strong>: 
-		[<a href="https://apposcmf8kb5033.h5.xiaoeknow.com/v2/course/alive/l_62f36b2ee4b0eca59c2127c7?type=2&app_id=appoSCMf8kb5033&pro_id=p_6214b182e4b066e96087ec57&available=true&share_user_id=u_628c93c5dc641_P1UyQhrGmR&share_type=5&scene=%E5%88%86%E4%BA%AB&share_scene=1&entry=2&entry_type=2002&state=3e66fce1cd6f09304d0691d2f4f91ef9_tDzhxX">Video</a>]
+<!-- 		<strong>Link</strong>: 
+		[<a href="https://apposcmf8kb5033.h5.xiaoeknow.com/v2/course/alive/l_62f36b2ee4b0eca59c2127c7?type=2&app_id=appoSCMf8kb5033&pro_id=p_6214b182e4b066e96087ec57&available=true&share_user_id=u_628c93c5dc641_P1UyQhrGmR&share_type=5&scene=%E5%88%86%E4%BA%AB&share_scene=1&entry=2&entry_type=2002&state=3e66fce1cd6f09304d0691d2f4f91ef9_tDzhxX">Video</a>] -->
 	</li>
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>VALSE</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: MSDN: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
 		<strong>Link</strong>: [<a href="https://mp.weixin.qq.com/s/EpzaYMd49QZk8qE0Q271iA">VALSE</a>]
-		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Video</a>]
+<!-- 		[<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Video</a>] -->
 	</li>
  	<li>
 		<div style="float:left; text-align:left; color:red"><strong>AI Drive</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
-		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Video</a>]
+<!-- 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1ag411o7kz?spm_id_from=333.337.search-card.all.click">Video</a>] -->
 	</li>
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>AI TIME</strong></div> <div style="float:right; text-align:right">Jun. 2022</div><br>
 		<strong>Title</strong>: Attribute-guided Transformer for Zero-Shot Learning<br>
-		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Video</a>]
+<!-- 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1kR4y1w7yj">Video</a>] -->
 	</li>
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>Extreme Mart (极市)</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: Research on Key Technology for Zero-shot Learning<br>
-		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Video</a>]
+<!-- 		<strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV14b4y1W7dp/">Video</a>] -->
 	</li>
        <li>
 		<div style="float:left; text-align:left; color:red"><strong>AI TIME</strong></div> <div style="float:right; text-align:right">Feb. 2022</div><br>
 		<strong>Title</strong>: 基于层次适应的零样本学习<br>
-	       <strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1X44y1H7S4">Video</a>]
+<!-- 	       <strong>Link</strong>: [<a href="https://www.bilibili.com/video/BV1X44y1H7S4">Video</a>] -->
 	</li>
         <li>
 		<div style="float:left; text-align:left; color:red"><strong>CVTE</strong></div> <div style="float:right; text-align:right">Dec. 2021</div><br>
