--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@ var _hmt = _hmt || [];
 
 				<h3> PhD student </h3>
 				<p>
-					1037 Luoyu Road,<br>
+<!-- 					1037 Luoyu Road,<br>
 					National Anti-counterfeit Engineering Research Center,<br>
 					Huazhong University of Science and Technology (HUST), <br>
 					Wuhan, China, 430074 <br>
-					<br>
-					Email: shimingchen <strong>at</strong> hust <strong>dot</strong> edu <strong>dot</strong> cn; &nbsp gchenshiming <strong>at</strong> 
-					gmail <strong>dot</strong> com
+					<br> -->
+					Email:  gchenshiming <strong>at</strong> gmail <strong>dot</strong> com
 					       
 				</p>
 				<p>     
@@ -88,7 +87,7 @@ var _hmt = _hmt || [];
      <h2>Biography</h2>
     <div id="news-content" >
 	  <span>I come from Meizhou, Guangdong, where is known as “<i>Hakka capital</i>” and “<i> City of Football </i>”.<br>
-	  I am currently a Third-year PhD student in School of Electronic Information and Communications at <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology</a>, under the supervision by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>.
+	  I currently a Postdoctoral Research Fellow in the <a href="https://www.cmu.edu/dietrich/causality/">Causal Learning and Reasoning (CLeaR)</a> research group at CMU and the <a href="https://mbzuai.ac.ae/research/research-center/ciai/">Center for Integrative AI (CIAI)</a> at MBZUAI, working with Prof.  <a href="https://tongliang-liu.github.io/index.html">Kun Zhang</a>. Prior to that, he received his Ph.D degree at Huazhong University of Science and Technology in 2022, advised by Prof. <a href="http://bmal.hust.edu.cn/info/1005/1091.htm">Xinge You</a>.
 	  I'm also visiting at <a href="https://www.tmllab.ai/">Trustworthy Machine Learning Lab (TML Lab)</a>, University of Sydney, working with Prof. <a href="https://tongliang-liu.github.io/index.html">Tongliang Liu</a>.
           My current research interests span computer vision and machine learning with a series of topics, such as <strong><i>zero-shot learning</i></strong>, <strong><i>generative modeling and learning</i></strong>, and <strong><i>visual-and-language learning</i></strong>.</span> <br> <br> 
 	  <span></span><br>
