--- a/index.html
+++ b/index.html
@@ -416,12 +416,21 @@ var _hmt = _hmt || [];
      <h2>Invited Talks</h2>
 	<ul>
 	<li>
+		<div style="float:left; text-align:left; color:red"><strong>School of Computer Science and Technology, Guizhou University</strong></div> <div style="float:right; text-align:right">Apr. 2023</div><br>
+		<strong>Title</strong>: Semantic-Guided Zero-Shot Learning<br>
+	</li>
+	
+	<li>
+		<div style="float:left; text-align:left; color:red"><strong>National Key Laboratory of Science and Technology on Multispectral Information Processing, Huazhong University of Science and Technology</strong></div> <div style="float:right; text-align:right">Mar. 2023</div><br>
+		<strong>Title</strong>: Deep Feature Representations Based Zero-Shot Learning<br>
+	</li>
+	<li>
 		<div style="float:left; text-align:left; color:red"><strong>IEEE International Conference on Digital Twins and Parallel Intelligence</strong></div> <div style="float:right; text-align:right">Nov. 2022</div><br>
 		<strong>Title</strong>: Mutually Semantic Distillation Network for Zero-Shot Learning<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>Huawei (Shanghai)</strong></div> <div style="float:right; text-align:right">Aug. 2022</div><br>
-		<strong>Title</strong>: Deep Feature Representations Based Zero-Shot Learning<br>
+		<strong>Title</strong>: Deep Feature Representations Based Zero-Shot Image Classification<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left; color:red"><strong>Zhidongxi (AI New Youth)</strong></div> <div style="float:right; text-align:right">Aug. 2022</div><br>
